# papermill

./: .gitignore  README.md  example_config.toml  pyproject.toml
src/papermill/: __init__.py  __main__.py  config.py  util.py
src/papermill/metadata/: __init__.py  arxiv.py  backup.py  base.py  isbn.py
tests/: corpus.jsonl  test_bibtex_parser.py  test_topic_modeling.py
